plugins {
    id 'java-library'
}

group = 'com.qiplat'
version = '0.0.1'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(22)
    }
}

def repoRoot = projectDir.toPath().resolve('../..').normalize().toFile()
def generatedNativeResourcesDir = layout.buildDirectory.dir('generated/resources/main')

sourceSets {
    main {
        resources.srcDir(generatedNativeResourcesDir)
    }
}

repositories {
    mavenCentral()
    google()
}

dependencies {
    api 'com.google.code.gson:gson:2.11.0'
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
}

tasks.register('syncNativeResources', Sync) {
    into(generatedNativeResourcesDir)

    from(new File(repoRoot, 'prebuilt/windows/x64')) {
        include 'sweeteditor.dll'
        into 'native/windows-x86_64'
    }
    from(new File(repoRoot, 'prebuilt/linux/x86_64')) {
        include 'libsweeteditor.so'
        into 'native/linux-x86_64'
    }
    from(new File(repoRoot, 'prebuilt/osx/x86_64')) {
        include 'libsweeteditor.dylib'
        into 'native/macos-x86_64'
    }
    from(new File(repoRoot, 'prebuilt/osx/arm64')) {
        include 'libsweeteditor.dylib'
        into 'native/macos-aarch64'
    }
}

tasks.named('processResources') {
    dependsOn(tasks.named('syncNativeResources'))
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += ['--enable-preview']
}

test {
    useJUnitPlatform()
    jvmArgs '--enable-preview', '--enable-native-access=ALL-UNNAMED'
}
